[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-can-tosun-tsmasterapi"
version = "2024.6.23.1135"
description = "TOSUN TSMasterApi python-can interface plugin"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "python-can>=4.0",
]

[project.entry-points."can.interface"]
tosun = "tosun.canlib:TSMasterApiBus"

[tool.setuptools.packages.find]
include = ["tosun*"]
